# LightBulb

./: .cproject  .gitignore  .gitmodules  .project  .travis.yml  ANNHelper.sln  CMakeLists.txt  License.md  LightBulb.sln  LightBulb150809(1).vsp  LightBulb150809.vsp  README.md  build.sh  gmon.out  src
example/LightBulbExample/: CMakeLists.txt  LightBulbExample.vcxproj  LightBulbExample.vcxproj.filters  LightBulbExamplePrec.cpp  LightBulbExamplePrec.hpp  main.cpp
example/LightBulbExample/IO/: NetworkIO.cpp  NetworkIO.hpp  NetworkSimulatorIO.cpp  NetworkSimulatorIO.hpp  PongGameIO.cpp  PongGameIO.hpp  PongReinforcementEnvironmentIO.cpp  PongReinforcementEnvironmentIO.hpp  PongReinforcementWorldIO.hpp  PositionIO.cpp  PositionIO.hpp
example/LightBulbExample/Performance/: ViennaCLTests.cpp  ViennaCLTests.hpp
src/LightBulb/: CMakeLists.txt  LightBulb.vcxproj  LightBulb.vcxproj.filters  LightBulbPrec.cpp
src/LightBulb/ActivationOrder/: AbstractActivationOrder.cpp  AbstractActivationOrder.hpp  TopologicalOrder.cpp  TopologicalOrder.hpp
src/LightBulb/Event/: AbstractObserver.cpp  Observable.cpp  Observable.hpp  Observer.cpp
src/LightBulb/IO/: AbstractCoevolutionEnvironmentIO.cpp  AbstractCoevolutionEnvironmentIO.hpp  AbstractCoevolutionWorldIO.hpp  AbstractDefaultIndividualIO.cpp  AbstractDefaultIndividualIO.hpp  AbstractDefaultReinforcementIndividualIO.cpp  AbstractEvolutionLearningRuleIO.cpp  AbstractEvolutionLearningRuleIO.hpp  AbstractEvolutionObjectIO.hpp  AbstractExporter.cpp  AbstractExporter.hpp  AbstractGradientDescentAlgorithmIO.cpp  AbstractHallOfFameAlgorithmIO.cpp  AbstractHallOfFameAlgorithmIO.hpp  AbstractIndividualIO.cpp  AbstractIndividualIO.hpp  AbstractLearningRuleIO.cpp  AbstractLearningRuleIO.hpp  AbstractLoggerIO.cpp  AbstractNetworkExporter.cpp  AbstractNetworkExporter.hpp  AbstractRandomGeneratorIO.cpp  AbstractRandomGeneratorIO.hpp  AbstractReinforcementEnvironmentIO.cpp  AbstractReinforcementEnvironmentIO.hpp  AbstractReinforcementLearningRuleIO.cpp  AbstractReinforcementLearningRuleIO.hpp  AbstractSimpleEvolutionEnvironmentIO.cpp  AbstractSimpleEvolutionEnvironmentIO.hpp  AbstractSimpleEvolutionWorldIO.hpp  AbstractSupervisedLearningRuleIO.cpp  BackpropagationIO.cpp  BrainJSExporter.cpp  BrainJSExporter.hpp  CoevolutionLearningRuleIO.cpp  CoevolutionLearningRuleIO.hpp  DQNLearningRuleIO.cpp  DefaultReinforcementIndividualIO.cpp  DifferentNeuronDescriptionFactoryIO.cpp  EvolutionLearningRuleIO.cpp  (+37 more)
src/LightBulb/Learning/: AbstractLearningResult.hpp  AbstractLearningRule.cpp  AbstractLearningRule.hpp
src/LightBulb/Lib/: ziggurat.cpp  ziggurat.hpp
src/LightBulb/LinearAlgebra/: AbstractLinearAlgebraObject.cpp  AbstractLinearAlgebraUser.cpp  Kernel.cpp  Matrix.cpp  Scalar.cpp  Tensor.cpp  Vector.cpp
src/LightBulb/Logging/: AbstractLoggable.cpp  AbstractLoggable.hpp  AbstractLogger.cpp  AbstractLogger.hpp  ConsoleLogger.cpp  StorageLogger.cpp  StorageLogger.hpp
src/LightBulb/NetworkTopology/: AbstractFeedForwardNetworkTopology.cpp  AbstractNetworkTopology.cpp  AbstractNetworkTopology.hpp  FeedForwardNetworkTopology.cpp  FeedForwardNetworkTopology.hpp
src/LightBulb/NeuralNetwork/: AbstractNeuralNetwork.cpp  AbstractNeuralNetwork.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  NeuralNetworkIO.cpp  NeuralNetworkIO.hpp
src/LightBulb/NeuronDescription/: AbstractNeuronDescriptionFactory.cpp  DifferentNeuronDescriptionFactory.cpp  DifferentNeuronDescriptionFactory.hpp  NeuronDescription.cpp  SameNeuronDescriptionFactory.cpp
src/LightBulb/Random/: AbstractRandomGenerator.cpp  AbstractRandomGenerator.hpp  AbstractRandomGeneratorUser.cpp  AbstractRandomGeneratorUser.hpp  StandardRandomGenerator.cpp  XorShfGenerator.cpp  ZigguratGenerator.cpp
src/LightBulb/Teaching/: AbstractTeachingLesson.cpp  AbstractTeachingLesson.hpp  Teacher.cpp  Teacher.hpp  TeachingInput.cpp  TeachingInput.hpp  TeachingLessonBooleanInput.cpp  TeachingLessonBooleanInput.hpp  TeachingLessonLinearInput.cpp  TeachingLessonLinearInput.hpp
src/LightBulb/Tools/: AbstractCloneable.cpp
src/LightBulbApp/: App.cpp  CMakeLists.txt  LightBulbApp.vcxproj  LightBulbApp.vcxproj.filters
src/LightBulbApp/IO/: AbstractCoevolutionTrainingPlanIO.cpp  AbstractCoevolutionTrainingPlanIO.hpp  AbstractEvolutionTrainingPlanIO.cpp  AbstractEvolutionTrainingPlanIO.hpp  AbstractLearningRuleTrainingPlanIO.cpp  AbstractPreferenceIO.cpp  AbstractReinforcementTrainingPlanIO.cpp  AbstractReinforcementTrainingPlanIO.hpp  AbstractSingleNNTrainingPlanIO.cpp  AbstractSingleNNTrainingPlanIO.hpp  AbstractTrainingPlanIO.cpp  AbstractTrainingPlanIO.hpp  BooleanPreferenceIO.cpp  ChoicePreferenceIO.cpp  DoublePreferenceIO.cpp  IntegerPreferenceIO.cpp  NeuralNetworkRepositoryIO.cpp  PreferenceGroupIO.cpp  TrainingControllerIO.cpp  TrainingControllerIO.hpp  TrainingPlanRepositoryIO.cpp  TrainingPlanRepositoryIO.hpp
src/LightBulbApp/Performance/: NetworkPerformanceTests.cpp  NetworkPerformanceTests.hpp
src/LightBulbApp/Repositories/: NeuralNetworkRepository.cpp  TrainingPlanRepository.cpp  TrainingPlanRepository.hpp
src/LightBulbApp/TrainingPlans/: AbstractCoevolutionTrainingPlan.cpp  AbstractCoevolutionTrainingPlan.hpp  AbstractEvolutionTrainingPlan.cpp  AbstractEvolutionTrainingPlan.hpp  AbstractLearningRuleTrainingPlan.cpp  AbstractLearningRuleTrainingPlan.hpp  AbstractReinforcementTrainingPlan.cpp  AbstractReinforcementTrainingPlan.hpp  AbstractSingleNNTrainingPlan.cpp  AbstractSupervisedTrainingPlan.cpp  AbstractSupervisedTrainingPlan.hpp  AbstractTrainingPlan.cpp  AbstractTrainingPlan.hpp
src/LightBulbApp/Windows/: AbstractApp.cpp  AbstractCustomSubApp.cpp  AbstractCustomSubAppFactory.cpp  AbstractMainApp.cpp  AbstractSubApp.cpp  AbstractSubAppFactory.cpp  AbstractSubAppWindow.cpp  AbstractWindow.cpp  AbstractWindow.hpp  EvolutionAnalyzerController.cpp  EvolutionAnalyzerController.hpp  EvolutionAnalyzerFactory.cpp  EvolutionAnalyzerWindow.cpp  EvolutionAnalyzerWindow.hpp  (+29 more)
tests/UnitTests/: CMakeLists.txt  UT.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters  UnitTestsPrec.cpp  UnitTestsPrec.hpp
(+2222 files in other folders)
