cmake_minimum_required(VERSION 2.6.4)
project (LightBulb)
include(../../cmake/macros.txt)

file(GLOB_RECURSE SOURCES *.cpp)
include_directories(../../include)

include_directories(../../extlibs/eigen)
include_directories(../../extlibs/cereal/include)
include_directories(../../extlibs/viennacl)
add_definitions(-DVIENNACL_WITH_OPENCL -DVIENNACL_WITH_EIGEN)

find_package(OpenCL REQUIRED)

add_library(LightBulb ${SOURCES})
target_link_libraries(LightBulb ${OpenCL_LIBRARY})
use_cxx11(LightBulb)
install(TARGETS LightBulb DESTINATION lib)
install(DIRECTORY ../../include/LightBulb DESTINATION include)
install(DIRECTORY ../../extlibs/eigen/Eigen DESTINATION include)
install(DIRECTORY ../../extlibs/cereal/include/cereal DESTINATION include)
install(DIRECTORY ../../extlibs/viennacl DESTINATION include)
set_target_properties(LightBulb PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "../../include/LightBulb/LightBulbPrec.hpp")
set_target_properties(LightBulb PROPERTIES COTIRE_ADD_UNITY_BUILD FALSE)
cotire(LightBulb)